<resources>
    <string name="app_name">HouseHomey</string>
    <string name="defaultError">An error occurred. Please try again later.</string>
    <string name="filter_dropdown_description">filtering options.</string>
    <string name="sort_button_description">sorting options.</string>
    <string name="toggle_description">toggle between ascending and descending order.</string>
    <string name="delete_action_description">delete items.</string>
    <string name="tags_popup_description">Add tags to selected items</string>
    <string name="select">Select</string>
    <string name="done">Done</string>
    <string name="total_value">Total Value</string>
    <string name="ascending_alias">Asc</string>
    <string name="descending_alias">Desc</string>
    <string name="user_real_name">John Smith</string>
    <string name="sign_up_clickable_text"><u>Register</u></string>
    <string name="sign_in_clickable_text"><u>Sign In</u></string>
    <string name="sign_up_redirect_text">Don\'t have an account?</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="sign_in_redirect_text">Already have an account?</string>
    <string name="sign_up_button_text">Register</string>
    <string name="email_hint_text">Email</string>
    <string name="confirm_password_hint_text">Confirm Password</string>
</resources>
