<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/select_state_options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:paddingHorizontal="14dp">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_select_button"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:text="@string/done"
        android:textSize="16sp"
        android:layout_marginStart="4dp"
        android:padding="0dp"
        android:textColor="#8d897e"
        android:backgroundTint="#e4ddcb" />

    <LinearLayout
        android:id="@+id/select_state_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:gravity="center_vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:icon="@drawable/baseline_delete_24"
            app:iconSize="26dp"
            app:iconGravity="textEnd"
            app:iconTint="@color/black"
            android:contentDescription="@string/delete_action_description"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_tags"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:iconGravity="textEnd"
            app:icon="@drawable/sell_24px"
            app:iconSize="26dp"
            app:iconTint="@color/black"
            android:contentDescription="@string/tags_popup_description"/>
    </LinearLayout>

</FrameLayout>
