<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base_state_options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="12dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_items_button"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:text="@string/select"
        android:layout_marginStart="4dp"
        android:padding="0dp"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/base_state_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:gravity="center_vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_dropdown_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:icon="@drawable/baseline_tune_24"
            app:iconSize="26dp"
            app:iconGravity="textEnd"
            app:iconTint="@color/black"
            android:contentDescription="@string/filter_dropdown_description"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sort_by_alpha_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:icon="@drawable/baseline_sort_by_alpha_24"
            app:iconSize="26dp"
            app:iconTint="@color/black"
            app:iconGravity="textEnd"
            android:contentDescription="@string/sort_button_description"/>

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/sort_order_toggle"
            android:layout_width="36dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="36dp"
            app:iconGravity="textStart|start"
            android:textOn=""
            android:textOff=""
            android:background="@drawable/toggle_selector"
            />
    </LinearLayout>

</FrameLayout>

